SERVER-22532 fail cleanly for $type predicates with invalid numerical type codes